Corrected view overflow behavior for magnification

--- a/uireader/src/styles/readercontainer.scss
+++ b/uireader/src/styles/readercontainer.scss
@@ -16,7 +16,7 @@
         transform: translate(-50%, -50%);
         visibility: hidden;
         z-index: -1;
-        overflow: hidden;
+        overflow: scroll;
         -ms-overflow-style: none;
         scrollbar-width: none;
 
